# RoboJump

./: CMakeLists.txt  LICENSE.md  README.md
data/: GameInfo.json
data/Config/: GameInfo_Audio.json  GameInfo_Config.json  GameInfo_Enemies.json  GameInfo_Gems.json  GameInfo_Level.json  GameInfo_PickUps.json  GameInfo_Player.json  GameInfo_PowerUps.json  GameInfo_UI.json
data/Levels/: RoboJumpMap_Level1.tmx  RoboJumpMaps.tiled-session
data/Levels/images/tilemap/: BackgroundsTileset.tsx  ChestTileSet.tsx  FlagsTileset.tsx  GUITileset.tsx  GemsTileset.tsx  KeyboardKeysTileSet.tsx  LocationsTileset.tsx  TrapsTileset.tsx
include/Core/: AssetManager.h  AudioManager.h  AudioTypes.h  ColissionManager.h  CollisionManager.h  EnemyManager.h  Game.h  GemManager.h  Level.h  PickUpManager.h  PowerUpManager.h  World.h
include/Gameplay/: Entity.h  GameObject.h  Gem.h  PickUp.h  Player.h  PowerUp.h
include/Gameplay/Enemies/: Cactus.h  Enemy.h  Frog.h  Stomp.h  Zombie.h
include/Render/: MapLayer.h  ObjectLayer.h  SFMLOrthogonalLayer.h
include/UI/: HUD.h  UIManager.h  UIScreen.h  UIScreenGameOver.h  UIScreenMainMenu.h  UIScreenVictory.h
include/Utils/: Constants.h
src/: main.cpp
src/Core/: AssetManager.cpp  AudioManager.cpp  ColissionManager.cpp  CollisionManager.cpp  EnemyManager.cpp  Game.cpp  GemManager.cpp  Level.cpp  PickUpManager.cpp  PowerUpManager.cpp  World.cpp
src/Gameplay/: Entity.cpp  Gem.cpp  PickUp.cpp  Player.cpp  PowerUp.cpp
src/Gameplay/Enemies/: Cactus.cpp  Enemy.cpp  Frog.cpp  Stomp.cpp  Zombie.cpp
src/Render/: MapLayer.cpp  ObjectLayer.cpp  SFMLOrthogonalLayer.cpp
src/UI/: HUD.cpp  UIManager.cpp  UIScreen.cpp  UIScreenGameOver.cpp  UIScreenMainMenu.cpp  UIScreenVictory.cpp
